# a2a

./: .dockerignore  .env.example  .gitignore  Dockerfile.agent  Dockerfile.zkml  IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: build-zkml-cli.yml
agents/analyst/: features.py  main.py
agents/policy/: main.py
agents/policy/models/: authorization.onnx
agents/scout/: main.py
agents/scout/sources/: __init__.py  base.py  crtsh.py  openphish.py  phishtank.py  synthetic.py  twitter.py  typosquat.py  urlhaus.py
database/: schema.sql
shared/: __init__.py  a2a.py  activity.py  config.py  database.py  events.py  logging_config.py  prover.py  types.py  x402.py
tests/: conftest.py  test_features.py
tests/test_sources/: __init__.py  test_openphish.py
threat-intel-network/: .gitignore  Dockerfile.zkml  Makefile
threat-intel-network/agents/analyst/: __init__.py  clustering.py  main.py  requirements.txt
threat-intel-network/jolt-atlas/: .gitignore  Cargo.toml
threat-intel-network/jolt-atlas/atlas-onnx-tracer/: Cargo.toml
threat-intel-network/jolt-atlas/atlas-onnx-tracer/examples/: article_classification.rs  bge.rs  gpt2.rs  nanoGPT.rs  perceptron.rs  self_attention_layer.rs
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/broadcast/: gen.py  network.onnx
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/mlp_square/: gen.py  network.onnx
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/mlp_square_4layer/: gen.py  network.onnx
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/moveaxis/: gen.py  network.onnx
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/reshape/: gen.py  network.onnx
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/rsqrt/: gen.py  network.onnx
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/self_attention_layer/: gen.py  input.json  network.onnx  network.onnx.data
threat-intel-network/jolt-atlas/atlas-onnx-tracer/models/test_add_sub_mul/: gen.py  network.onnx
threat-intel-network/jolt-atlas/atlas-onnx-tracer/src/: lib.rs
threat-intel-network/jolt-atlas/atlas-onnx-tracer/src/model/: execute.rs  load.rs  mod.rs  test.rs  trace.rs
threat-intel-network/jolt-atlas/atlas-onnx-tracer/src/node/: mod.rs
threat-intel-network/jolt-atlas/atlas-onnx-tracer/src/node/handlers/: activation.rs  arith.rs  index.rs  mod.rs  other.rs  reduce.rs  shape.rs
threat-intel-network/jolt-atlas/atlas-onnx-tracer/src/ops/: add.rs  and.rs  and2.rs  broadcast.rs  constant.rs  cube.rs  div.rs  einsum.rs  erf.rs  gather.rs  identity.rs  iff.rs  input.rs  is_nan.rs  mod.rs  move_axis.rs  mul.rs  noop.rs  relu.rs  reshape.rs  rsqrt.rs  shr.rs  softmax.rs  square.rs  sub.rs  sum.rs  tanh.rs
threat-intel-network/jolt-atlas/atlas-onnx-tracer/src/tensor/: mod.rs  ops.rs
threat-intel-network/jolt-atlas/atlas-onnx-tracer/src/utils/: handler_builder.rs  mod.rs  parser.rs  pretty_print.rs  quantize.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/: Cargo.toml
threat-intel-network/jolt-atlas/jolt-atlas-core/src/: lib.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/: mod.rs  witness.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/lookup_tables/: and.rs  mod.rs  or.rs  relu.rs  test.rs  xor.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/lookup_tables/prefixes/: and.rs  lower_word_no_msb.rs  mod.rs  not_msb.rs  or.rs  xor.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/lookup_tables/suffixes/: and.rs  lower_word_no_msb.rs  mod.rs  one.rs  or.rs  relu.rs  xor.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/op_lookups/: mod.rs  ra_virtual.rs  read_raf_checking.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/ops/: add.rs  broadcast.rs  constant.rs  cube.rs  div.rs  iff.rs  input.rs  mod.rs  moveaxis.rs  mul.rs  relu.rs  reshape.rs  rsqrt.rs  square.rs  sub.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/ops/einsum/: bmk_kbn_mbn.rs  k_nk_n.rs  mbk_nbk_bmn.rs  mk_kn_mn.rs  mod.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/onnx_proof/ops/softmax/: mod.rs
threat-intel-network/jolt-atlas/jolt-atlas-core/src/utils/: einsum.rs  mod.rs
threat-intel-network/jolt-atlas/joltworks/: Cargo.toml
threat-intel-network/jolt-atlas/joltworks/src/: config.rs  lib.rs
threat-intel-network/jolt-atlas/joltworks/src/field/: ark.rs  mod.rs  tracked_ark.rs
threat-intel-network/jolt-atlas/joltworks/src/msm/: mod.rs
threat-intel-network/jolt-atlas/joltworks/src/poly/: dense_mlpoly.rs  identity_poly.rs  mod.rs  multilinear_polynomial.rs  one_hot_polynomial.rs  opening_proof.rs  prefix_suffix.rs  ra_poly.rs  range_mask_polynomial.rs  rlc_polynomial.rs
threat-intel-network/jolt-atlas/joltworks/src/poly/commitment/: hyperkzg.rs
threat-intel-network/jolt-atlas/joltworks/src/poly/commitment/dory/: commitment_scheme.rs  dory_globals.rs  wrappers.rs
threat-intel-network/jolt-atlas/joltworks/src/subprotocols/: booleanity.rs  hamming_weight.rs  mles_product_sum.rs  mod.rs  opening_reduction.rs  sumcheck.rs
threat-intel-network/jolt-atlas/joltworks/src/transcripts/: blake2b.rs  keccak.rs  transcript.rs
threat-intel-network/jolt-atlas/joltworks/src/utils/: counters.rs  errors.rs  lookup_bits.rs  mod.rs  small_scalar.rs
threat-intel-network/scripts/: setup_zkml.sh  test_x402.py
threat-intel-network/shared/: a2a.py  activity.py  activity_store.py  database.py  events.py  jsonrpc.py  prover.py  reputation.py  sse.py  task.py  x402.py
threat-intel-network/tests/: __init__.py  test_database.py
threat-intel-network/ui/: package.json  tailwind.config.js
threat-intel-network/zkml-cli/: Cargo.toml
ui/: Dockerfile  next.config.js
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/about/: page.tsx
ui/components/: AgentPipeline.tsx  AgentTriangle.tsx  Navigation.tsx  ProofCard.tsx  TaskTimeline.tsx  TreasuryWidget.tsx  VerificationChecklist.tsx
ui/lib/: api.ts
zkml-cli/src/: main.rs
(+161 files in other folders)
