[package]
name = "atlas-onnx-tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.19"
rand = "0.8"
regex = "1.10.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
thiserror = { version = "1.0.38", default-features = false }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tract-onnx = { git = "https://github.com/sonos/tract/", default-features = false }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
maybe-rayon = { version = "0.1.1" }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
colored = { version = "2.0.0", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
chrono = "0.4.31"
maybe-rayon = { version = "0.1.1", features = ["threads"] }
