[package]
name = "joltworks"
version = "0.1.0"
edition = "2021"

[features]
monitor = ["dep:sysinfo"]
allocative = ["dep:inferno"]
challenge-254-bit = []
test-feature = []

[profile.test]
opt-level = 3
lto = "off"

[profile.release]
debug = 1
lto = "fat"

[profile.build-fast]
inherits = "release"
incremental = true
lto = "off"
overflow-checks = true

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

[dependencies]
# Internal dependencies
common = { path = "../common" }
atlas-onnx-tracer = { path = "../atlas-onnx-tracer" }

# Cryptography and Math
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false, features = [
    "derive",
] }
ark-std = { version = "0.5.0", default-features = false }
sha3 = "0.10.8"
blake2 = "0.10"
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
dory = { package = "dory-pcs", version = "0.1.0", features = [
    "backends",
    "cache",
    "disk-persistence",
] }

# Numeric
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

# Parallel Processing
rayon = { version = "^1.8.0" }

# Randomness
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
rand_distr = "0.4.3"

# Tracing and Profiling
tracing = { version = "0.1.37", default-features = false }
inferno = { version = "0.12.3", optional = true }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

# Core Utilities
thiserror = "1.0.58"
strum = { version = "0.26.3", default-features = false }
strum_macros = "0.26.4"
fixedbitset = "0.5.0"
derive_more = { version = "2.0.1", features = [
    "from",
], default-features = false }
itertools = "0.10.0"

# System and Platform
sysinfo = { version = "0.30.8", optional = true }
memory-stats = { version = "1.0.0", features = ["always_use_statm"] }

# Testing
serial_test = "3.2.0"
